# what-about-binaries

./: .depend  INSTALL  Makefile  Makefile.in  README.md  archi.ml  archi.mli  configure.ac  elf_header.ml  elf_header.mli  endian.ml  endian.mli  hexa.ml  hexa.mli  machine.ml  machine.mli  main.ml  program_header_type.ml  section_header_type.ml  section_header_type.mli  webgui.ml
gui/: main.ml
src/: archi.ml  archi.mli  decode.ml  decode.mli  decode_arm.ml  decode_arm.mli  decode_x86.ml  decode_x86.mli  eclass_conf.ml  eclass_conf.mli  elf_header.ml  elf_header.mli  elf_types.mli  endian.ml  endian.mli  hexa.ml  hexa.mli  machine.ml  machine.mli  main.ml  parse.ml  parse.mli  print.ml  print.mli  program_header_type.ml  program_header_type.mli  section_header_type.ml  symbol.ml  symbol.mli  webgui.ml
src/gui/: main.ml
src/webgui/: index.html
tests/: Makefile  add.arm  add.arm.out  add.arm.readelf  add.x86_64  add.x86_64.out  add.x86_64.readelf  calls.x86_64  calls.x86_64.out  hello.arm  hello.arm.out  hello.arm.readelf  hello.x86_64  hello.x86_64.out  hello.x86_64.readelf  verifyPIN_A.axf  verifyPIN_A.axf.out  verifyPIN_A.axf.readelf
